# Automata

automaton_exp1/: README.txt
automaton_exp1/cpp/: nfa.cpp  nfa.h
automaton_exp1/cpp_original/: CMakeLists.txt
automaton_exp2/: README.txt
automaton_exp2/cpp/: nfa.cpp  nfa.h  regex.cpp  regex.h
automaton_exp3/: README.txt  实验文档.docx
automaton_exp3/cpp/: nfa.h  regex.cpp  regex.h
automaton_exp3/cpp_original/: nfa.cpp
automaton_exp3/python/: regex.py
